# zk-sui-sdk

./: .gitignore  README.md  package.json  simple.circom  test.js
lib/: compile.js  verify.js
simple/: vkey.json
simple/abcd/: .gitignore  Move.toml
simple/abcd/sources/: abcd.move
simple/abcd/tests/: abcd_tests.move
sui-rust-src/: Cargo.toml  input.json  vkey.json
sui-rust-src/src/: main.rs
